Iniciando Criação e formatação do componente CardFilm

--- a/next-cp3/src/app/globals.css
+++ b/next-cp3/src/app/globals.css
@@ -17,7 +17,14 @@
 }
 
 body {
+    background-color: white;
+    margin-top: 2rem;
+    margin-top: 2rem;
  
+}
+
+.flex-auto{
+  display: inline-flex;
 }
 
 @layer utilities {
