--- a/next-cp3/components/Header/style.css
+++ b/next-cp3/components/Header/style.css
@@ -6,18 +6,18 @@
     font-weight: bold;
     color: #ffffff;
     display: flex;
-    flex-basis: auto;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
 }
 
 .title {
-    flex: 1;
-    position: relative;
     margin-top: 2rem;
-    margin-left: -10%;
+   
 }
 
 .img{
-    border-radius: 10%;
+    margin-right: 1rem;
 }
 
 
