--- a/next-cp3/components/CardFilm/style.css
+++ b/next-cp3/components/CardFilm/style.css
@@ -1,31 +1,36 @@
 
 .card {
-    background-color: white;
-    width: 20rem; /* ajuste conforme necessário */
+    background-color: rgb(112, 112, 112);
+    max-width: 12.8rem;
     height: auto;
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 2rem;
+    margin: 3px;
     border: 2px solid #ccc;
+    
     
   }
   
   .card-image {
-    max-width: 100%;
+    max-height: 200px;
     transform-origin: center;
     transform: scale(var(--img-scale));
     transition: transform 0.4s ease-in-out;
+    aspect-ratio: 1;
+    object-fit: contain;
+    margin-bottom: 0.5rem;
   }
   
   .card-content {   
-    padding: 0px;
   }
   
   .card-title {
     background-color: black;
     width: 100%;
-    justify-items: stretch;
+    min-height: 7rem;
+    max-height: 7rem;
+    transform-origin: center;
     color: white;
     font-size: 1rem;
     text-align: center;
@@ -39,8 +44,8 @@
   }
   
   .card-link {
-    position: absolute;
-    margin-bottom: 1px;
+    position: relative;
     background-color: rgb(48, 48, 48);
-    color:white
+    color:white;
+    text-align: center;
   }
